# pdir2

./: .gitignore  .travis.yaml  .travis.yml  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  annotate.json  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: HISTORY.md  HISTORY.rst  README.rst
pdir/: __init__.py  _internal_utils.py  api.py  attr_category.py  color.py  configuration.py  constants.py  format.py  utils.py
tests/: conftest.py  dummy_test.py  hlm.py  interactive_test.py  m.py  test_attr.py  test_attr_exceptions.py  test_buggy_attrs.py  test_category.py  test_container.py  test_descriptor.py  test_disbale_color.py  test_filters.py  test_pdir_format.py  test_pdir_text_import.py  test_search.py  test_slots.py  test_user_config.py  test_z_config.py
tests/data/: config_1.ini  config_2.ini  config_auto_color.ini  config_disable_color.ini  config_enable_color.ini  error_config_1.ini  error_config_2.ini
