[project]
name = "pdir2"
version = "0.3.6"
authors = [
    {name = "laike9m", email = "laike9m@gmail.com"},
]
dependencies = [
    'colorama;platform_system=="Windows"',
    'typing-extensions==4.2.*',
]
requires-python = ">=3.8"
license = {text = "MIT"}
description="Pretty dir printing with joy"
readme="README.md"
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: Implementation :: CPython',
]

[project.urls]
Funding = "https://github.com/sponsors/laike9m"
"Bug Tracker" = "https://github.com/laike9m/pdir2/issues"
homepage = "https://github.com/laike9m/pdir2"
repository = "https://github.com/laike9m/pdir2"

[tool.pdm.dev-dependencies]
dev = [
    "pytest==6.2.*",
    "tox==3.24.*",
    "tox-pdm==0.5.*",
    "ptpython==3.0.*",
    "bpython>=0.24",
    "ipython==7.16.*",
    "flake8==3.9.*",
    "pytest-mypy==0.10.*",
    "pandas==2.*",
    "hypothesis==6.21.*",
    "tox-gh-actions==2.8.*",
    "mypy>=1.4"
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
skip-string-normalization = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true
